[gd_scene load_steps=11 format=3 uid="uid://c0fbcr06dt7do"]

[ext_resource type="Script" path="res://Characters/eel.gd" id="1_23ifs"]
[ext_resource type="Texture2D" uid="uid://ddocjh5janvtk" path="res://Characters/Eel.png" id="1_27isf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6toa"]
size = Vector2(9, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5yau"]
atlas = ExtResource("1_27isf")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffywi"]
atlas = ExtResource("1_27isf")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdb0a"]
atlas = ExtResource("1_27isf")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj2q7"]
atlas = ExtResource("1_27isf")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3df7"]
atlas = ExtResource("1_27isf")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bosdm"]
atlas = ExtResource("1_27isf")
region = Rect2(0, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8eg4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5yau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffywi")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdb0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj2q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3df7")
}, {
"duration": 6.0,
"texture": SubResource("AtlasTexture_bosdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3df7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj2q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdb0a")
}],
"loop": false,
"name": &"strike",
"speed": 16.0
}]

[node name="Eel" type="Sprite2D"]
script = ExtResource("1_23ifs")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4.5, -1)
shape = SubResource("RectangleShape2D_q6toa")
debug_color = Color(0.996078, 0, 0.152941, 0.164706)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -1)
sprite_frames = SubResource("SpriteFrames_p8eg4")
animation = &"strike"
autoplay = "idle"
frame = 6
frame_progress = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
